plugins {
    id "java"
    id "jacoco"
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
}

dependencies {
    implementation "jakarta.servlet:jakarta.servlet-api:5.0.0"
    implementation "org.reflections:reflections:0.10.2"

    implementation "ch.qos.logback:logback-classic:1.2.12"

    implementation "org.apache.commons:commons-lang3:3.13.0"

    testImplementation "org.assertj:assertj-core:3.24.2"
    testImplementation "org.mockito:mockito-core:5.4.0"
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.2"
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.2'
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.2"
}
